--- a/src/views/parts/page-header.ejs
+++ b/src/views/parts/page-header.ejs
@@ -1,7 +1,7 @@
 <header class="page-header inner">
   <div class="container animate-up">
     <a href="/" class="back">
-      <img src="./images/back.svg" alt="" />
+      <img src="/images/back.svg" alt="" />
     </a>
     <h1><%= title %></h1>
   </div>
