refactoring project :tada:

--- a/src/views/job-edit.ejs
+++ b/src/views/job-edit.ejs
@@ -1,38 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#41414C" />
-    <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
-    <title>JobsCalc</title>
-
-    <link rel="stylesheet" href="/styles/main.css" />
-    <link rel="stylesheet" href="/styles/partials/page-header.css" />
-    <link rel="stylesheet" href="/styles/partials/cards.css" />
-    <link rel="stylesheet" href="/styles/partials/buttons.css" />
-    <link rel="stylesheet" href="/styles/partials/forms.css" />
-    <link rel="stylesheet" href="/styles/partials/modal.css" />
-    <link rel="stylesheet" href="/styles/partials/animations.css" />
-    <link rel="stylesheet" href="/styles/pages/job.css" />
-
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-
-    <script type="module" src="/scripts/job-edit.js"></script>
-    
-  </head>
+  <%- include ('parts/head') %>
+  <link rel="stylesheet" href="/styles/partials/forms.css" />
+  <link rel="stylesheet" href="/styles/pages/job.css" />
+  <script type="module" src="/scripts/job-edit.js"></script>
+  
   <body id="page-job-edit">
     <%- include('parts/page-header', { title: 'Editar Job' })  %> 
 
     <div class="container flex animate-up delay-2">
         <form id="form-job" action="/job/<%= job.id %> " method="post">
-          
-          
           <fieldset>
             <legend>Dados do Job</legend>
             <div class="separator light"></div>
@@ -95,32 +72,10 @@
           </a>
         </div>
       </aside>
-      
     </div>
     <!-- end container -->
 
-    <div class="modal-wrapper">
-      <div class="modal">
-        <img src="/images/trash-48.svg" alt="Excluir Job" title="Excluir Job" />
-        <h3>Excluir Job</h3>
-        <p>Quer mesmo excluir esse job? <br/>
-        Ele será apagado para sempre.  
-        <p>
-        <footer>
-          <a 
-            class="button gray" 
-            href="#">Cancelar</a>
-          <button
-            class="button red"
-            type="submit"
-            form="delete-job">Excluir Job</button>
-        </footer>
-      </div>
-      <form 
-        method="post" 
-        action="/job/delete/<%= job.id %> " 
-        id="delete-job"></form>
-    </div>
+    <%- include ('parts/modal', { id: `${job.id}` }) %>
     <!-- end modal-wrapper -->
   </body>
 </html>
