--- a/src/views/job.ejs
+++ b/src/views/job.ejs
@@ -1,28 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#41414C" />
-    <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
-    <title>JobsCalc</title>
-
-    <link rel="stylesheet" href="/styles/main.css" />
-    <link rel="stylesheet" href="/styles/partials/page-header.css" />
-    <link rel="stylesheet" href="/styles/partials/cards.css" />
-    <link rel="stylesheet" href="/styles/partials/buttons.css" />
-    <link rel="stylesheet" href="/styles/partials/forms.css" />
-    <link rel="stylesheet" href="/styles/partials/animations.css" />
-    <link rel="stylesheet" href="/styles/pages/job.css" />
-
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    
-  </head>
+  <%- include ('parts/head') %>
+  <link rel="stylesheet" href="/styles/partials/forms.css" />
+  <link rel="stylesheet" href="/styles/pages/job.css" />
   <body id="page-job">
     <%- include('parts/page-header', { title: 'Adicionar Novo Job' })  %> 
 
@@ -62,28 +42,10 @@
     
         </form>
       </main>
-      <aside class="card">
-        <img src="/images/money-gray.svg" alt="Imagem de Dinheiro">
-        <p>
-          Preencha os dados ao lado para
-          ver o valor do projeto
-        </p>
-        <div class="button-group">
-          <button 
-            class="button green" 
-            form="form-job" 
-            type="submit" 
-            title="Salvar Dados">Salvar</button>
-          <a 
-            href="/" 
-            class="button gray">
-            <img 
-              src="/images/trash-24.svg" 
-              alt="Cancelar cadastro" 
-              title="Cancelar cadastro">
-          </a>
-        </div>
-      </aside>
+
+      
+      <%- include ('parts/card', { icon: `money-gray.svg`, textCard: `Preencha os dados ao lado para
+        ver o valor do projeto` }) %>
       
     </div>
     <!-- end container -->
