--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -14,6 +14,9 @@
           O valor da sua hora é <br/>
           <strong>R$ <%= profile["value-hour"].toFixed(2).replace('.', ',') %> </strong>
         </p>
+        <p>
+            <strong>U$ <%= currentValue.url() %> </strong>
+        </p>
         <button class="button green" form="form-profile" type="submit">Salvar dados</button>
       </aside>
       <main>
