convert BRL to USD completed

--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -15,7 +15,8 @@
           <strong>R$ <%= profile["value-hour"].toFixed(2).replace('.', ',') %> </strong>
         </p>
         <p>
-            <strong>U$ <%= currentValue.url() %> </strong>
+          Valor em dólar: <br>
+          <strong>U$ <%= currentValue %> </strong>
         </p>
         <button class="button green" form="form-profile" type="submit">Salvar dados</button>
       </aside>
