--- a/src/views/parts/head.ejs
+++ b/src/views/parts/head.ejs
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/styles/partials/modal.css" />
   <link rel="stylesheet" href="/styles/partials/animations.css" />
 
+  <script src="/scripts/themes.js" defer type="module"></script> 
 
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link
