--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -23,18 +23,16 @@
   --color-card-title: #5A5A66;
   --color-card-label: #BFBFCC;
   --color-card-content: #787880;
-
+  
   --color-cancel: #E1E3E5;
   --color-delete: #EB3B35; 
   --color-save: #36B336;
-  
   --color-badge-progress-text: var(--color-save);
   --color-badge-progress-background: #E8F8E8;
   --color-badge-done-text: var(--color-delete);
   --color-badge-done-background:#FAECEB;
 
   --color-header-inner-title: var(--color-card-label)
-
 }
 
 /* user-agent font-size is 16px, let's make it responsive */
@@ -110,4 +108,14 @@ a {
 
 .flex {
   display: flex;
+}
+
+.darkmode {
+  --color-background: #323232;
+  --color-card-content: #8981b4;
+  --color-text: #f3f3f3;
+  --color-card-title: #6944b9;
+  --color-border-dark: #8358E3;
+  --color-save: #FA9C2D;
+  --color-secondary-hover: #EB8A1D;
 }
