--- a/src/views/parts/page-header.ejs
+++ b/src/views/parts/page-header.ejs
@@ -4,5 +4,9 @@
       <img src="/images/back.svg" alt="" />
     </a>
     <h1><%= title %></h1>
+    <div class="toggle">
+      <input type="checkbox" id="switch" name="theme">
+      <label for="switch" id="toggle-theme">Toggle</label>
+    </div>
   </div>
 </header>
