--- a/src/views/job-edit.ejs
+++ b/src/views/job-edit.ejs
@@ -77,6 +77,7 @@
 
     <%- include ('parts/modal', { id: `${job.id}` }) %>
     <!-- end modal-wrapper -->
+    <%- include('parts/footer') %>
   </body>
 </html>
  
