--- a/src/views/parts/head.ejs
+++ b/src/views/parts/head.ejs
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="/styles/partials/buttons.css" />
   <link rel="stylesheet" href="/styles/partials/modal.css" />
   <link rel="stylesheet" href="/styles/partials/animations.css" />
+  <link rel="stylesheet" href="/styles/partials/footer.css" />
 
   <script src="/scripts/themes.js" defer type="module"></script> 
 
