--- a/src/views/parts/page-header.ejs
+++ b/src/views/parts/page-header.ejs
@@ -6,7 +6,7 @@
     <h1><%= title %></h1>
     <div class="toggle">
       <input type="checkbox" id="switch" name="theme">
-      <label for="switch" id="toggle-theme">Toggle</label>
+      <label for="switch" id="toggle-theme" class="switch-theme">Toggle</label>
     </div>
   </div>
 </header>
