--- a/src/views/job-edit.ejs
+++ b/src/views/job-edit.ejs
@@ -53,7 +53,10 @@
       <aside class="card">
         <img src="/images/money-color.svg" alt="Imagem de Dinheiro">
         <p>
-          O valor do projeto ficou em <strong><%= job.budget.toFixed(2).replace('.', ',') %> </strong>
+          O valor do projeto ficou em: <strong><%= job.budget.toFixed(2).replace('.', ',') %> </strong>
+        </p>
+        <p>
+          O valor do em Dólar ficou em: <strong><%= (job['total-hours'] * currentValue).toFixed(2).replace('.', ',') %> </strong>
         </p>
         <div class="button-group">
           <button 
