change job edit :tada:

--- a/src/views/job-edit.ejs
+++ b/src/views/job-edit.ejs
@@ -56,7 +56,7 @@
           O valor do projeto ficou em: <strong><%= job.budget.toFixed(2).replace('.', ',') %> </strong>
         </p>
         <p>
-          O valor do em Dólar ficou em: <strong><%= (job['total-hours'] * currentValue).toFixed(2).replace('.', ',') %> </strong>
+          O valor em Dólar ficou em: <strong><%= (job['total-hours'] * currentValue).toFixed(2).replace('.', ',') %> </strong>
         </p>
         <div class="button-group">
           <button 
